--- a/src/Eticket.Infra.Data/packages.config
+++ b/src/Eticket.Infra.Data/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+	<package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.3" developmentDependency="true" />
   <package id="Dapper" version="1.42" targetFramework="net45" />
 </packages>
